--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,17 +10,28 @@ body {
   margin: 0;
 }
 
+div#header-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  height: 7rem;
+  width: 100%;
+  z-index: 1;
+}
+
 header {
   position: fixed;
   top: 0;
   left: 0;
   height: 4rem;
-  width: 100%;
+  width: 95%;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #540075;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
+  z-index: 2;
 }
 
 header h1 {
@@ -49,7 +60,7 @@ button:active {
 }
 
 .cart {
-  margin: 5rem 2rem;
+  margin: 2rem 2rem;
   border: 2px solid #540075;
   border-radius: 10px;
   padding: 2rem;
@@ -65,8 +76,9 @@ button:active {
 
 .product-list {
   list-style: none;
-  margin: 0 2rem;
+  margin: 9rem 2rem;
   padding: 0;
+  z-index: 0;
 }
 
 .product-item {
